--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "crypto-js": "3.1.9-1",
     "event-stream": "^4.0.1",
     "fast-csv": "3.4.0",
+    "csv-parse": "4.8.2",
     "geojson-validation": "^0.2.1",
     "get-stdin": "6.0.0",
     "getmac": "1.4.3",
